Fixed bug #28969 (Wrong data encoding of special characters).